# ascii-tool

./: LICENSE  README.md  layout.ui  pyproject.toml  ui_mainwindow.py
src/ascii_tool/: converter.py  logging_config.py  main.py
